fixed spacing between check them out button and start over button

--- a/style.css
+++ b/style.css
@@ -107,4 +107,5 @@ a {
 
 #artist-view p {
     font-size: 20px;
+    margin-bottom: -10px;
 }
